--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -8,6 +8,18 @@
     align-items: center;
 }
 
+.bottom {
+    position: fixed;
+    width: 100%;
+    bottom: 8rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
 .mainDiv {
     background-color: #fff5bd;
 }
@@ -45,10 +57,6 @@
 
 .dim {
     opacity: 50%;
-}
-
-.row {
-    display: flex;
 }
 
 .row img {
