--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,5 +1,5 @@
 .main {
-    padding: 10rem;
+    padding: 8rem;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -21,7 +21,17 @@
 }
 
 .mainDiv {
+    position: fixed;
+    width: 100%;
+    height: 100%;
     background-color: #fff5bd;
+}
+
+.videoDiv {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: black;
 }
 
 .header {
@@ -62,4 +72,41 @@
 .row img {
     flex: 33.33%;
     padding: 5px;
+}
+
+.topBar {
+    position: fixed;
+    width: 100%;
+
+    height: 5rem;
+
+    background: rgba(255, 245, 189, 0.6);
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 3rem;
+
+    -webkit-animation: slideDown 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: slideDown 1s; /* Firefox < 16 */
+        -ms-animation: slideDown 1s; /* Internet Explorer */
+         -o-animation: slideDown 1s; /* Opera < 12.1 */
+            animation: slideDown 1s;
+}
+
+/* Animations */
+.fadeoutAnimation {
+    -webkit-animation: fadeout 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadeout 1s; /* Firefox < 16 */
+        -ms-animation: fadeout 1s; /* Internet Explorer */
+         -o-animation: fadeout 1s; /* Opera < 12.1 */
+            animation: fadeout 1s;
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+@keyframes slideDown {
+    from { height: 0; }
+    to   { height: 5rem; }
 }
