--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -77,9 +77,7 @@
 .topBar {
     position: fixed;
     width: 100%;
-
     height: 5rem;
-
     background: rgba(255, 245, 189, 0.6);
     text-align: center;
     padding: 0.5rem;
@@ -90,6 +88,15 @@
         -ms-animation: slideDown 1s; /* Internet Explorer */
          -o-animation: slideDown 1s; /* Opera < 12.1 */
             animation: slideDown 1s;
+}
+
+.bottomDiv {
+    position: fixed;
+    bottom: 3rem;
+    left: calc(50% - 15rem);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Animations */
